removed animation rules as they were bugged and taking too long to find solution

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ header {
     clear: both;
     background-color: #fae2ad;
     border-bottom: 2px solid black;
+    z-index: 2;
 }
 
 #logo {
@@ -67,37 +68,22 @@ header {
     width: 450px;
 }
 
-#hero-image {
+#hero-outer {
+    height: 600px;
     width: 100%;
-    height: 660px;
     overflow: hidden;
 }
 
-#hero-outer {
+#hero-image {
+    height: 100%;
     width: 100%;
-    height: 600px;
-    overflow: hidden;
-
-    /* animates zoom effect on landing page */
-    animation-name: hero-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
+    background: url(/assets/css/images/hero-image.png) no-repeat;
+    background-size: cover;
+    z-index: 1;
 }
 
 div #hero-image {
     padding-top: 80px;
-    overflow: hidden;
-}
-
-/* animation */
-
-@keyframes hero-zoom {
-    from {
-        transform: scale(1);
-    }
-    to {
-        transform: scale(1.1);
-    }
 }
 
 /* navigation */
